--- a/src/assets/globals.css
+++ b/src/assets/globals.css
@@ -17,7 +17,7 @@
 
 @layer components {
   .container {
-    @apply max-w-[1230px] mx-auto px-[15px];
+    @apply max-w-[1230px] mx-auto sm:px-[15px] px-2;
   }
 
   .headertile-scrollbar::-webkit-scrollbar,
